--- a/views/footer.jade
+++ b/views/footer.jade
@@ -7,25 +7,25 @@ footer.footer-distributed
           a(href='#') Pipeline
           |         ·
           a(href='#') Tutorials
-        p.footer-company-name  Web-based software © 2016 Wei Ding
-        p.footer-company-name  Logo design © 2016 Wei Ding and Meng Chen 
+        p.footer-company-name  Web application: design by Wei Ding and Richard Neher
+        p.footer-company-name  Web application: implementation by Wei Ding
+        p.footer-company-name  Logo: design by Wei Ding and Meng Chen
       .footer-center
         div
           i.fa.fa-map-marker
           p
-            span  Max Planck Institute for Developmental Biology 
-            span  Spemannstrasse 35, 72076 Tuebingen, Germany 
+            span  Max Planck Institute for Developmental Biology
+            span  Spemannstrasse 35, 72076 Tuebingen, Germany
         #contacts
           i.fa.fa-envelope
           p
-            span wei.ding at tuebingen.mpg.de 
-            span  richard.neher at tuebingen.mpg.de 
+            span wei.ding at tuebingen.mpg.de
+            span  richard.neher at tuebingen.mpg.de
       .footer-right
         p.footer-company-about
           span About MPAV
-          |         MPAV is an open, active and fast growing project which responds positively to user demands. During the development stage, we have frequently adsorbed inspirations from researchers and clinicians in different universities and updated the web-service with their requirements.
-          br
-          |         Another aspiration of MPAV is to provide a platform for valuable data sharing (only with user permission), which will greatly facilitate the detection of meta-info associated evolutionary patterns and promote real-time outbreak surveillance.
+          |         MPAV is an interactive platform for pan-genome exploration. Its goal is to integrate different views of the data set to investigate evolutionary patterns of individual genes, their presence/absence among strains, and strain-specific meta data.
+          |         Comments, suggestions for improvements, bug reports etc are welcome.
         .footer-icons
           a(href='#')
             i.fa.fa-github
