--- a/views/footer.jade
+++ b/views/footer.jade
@@ -24,7 +24,7 @@ footer.footer-distributed
       .footer-right
         p.footer-company-about
           span About MPAV
-          |         MPAV is an interactive platform for pan-genome exploration. Its goal is to integrate different views of the data set to investigate evolutionary patterns of individual genes, their presence/absence among strains, and strain-specific meta data.
+          |         MPAV is an interactive platform for pan-genome exploration. It provides multiple different views on dozens of annotated genomes and allows rapid search by name, diversity, duplications, etc. Strain-specific meta data is integrated into the phylogenetic tree viewer such that associations of between gene presence and phenotypes can be spotted.
           |         Comments, suggestions for improvements, bug reports etc are welcome.
         .footer-icons
           a(href='#')
