fixed navbar, added image credites, links to repo still to be done

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,7 +23,7 @@ html
           #species-selector
           .dc-data-count
         #dc-straincount-chart.col-md-3
-          .alert.alert-info(role='alert') Number of genes 
+          .alert.alert-info(role='alert') Gene count rank distribution 
         #dc-geneLength-chart.col-md-3
           .alert.alert-info(role='alert') Gene length distribution
         .col-md-2
