--- a/views/tutorial.jade
+++ b/views/tutorial.jade
@@ -30,7 +30,7 @@ html
       }
       }
   body(data-spy='scroll', data-target='#myScrollspy', data-offset='100')
-    include navbar 
+    include navbar_tutorial
     .container
       br
       br   
