--- a/views/footer.jade
+++ b/views/footer.jade
@@ -27,5 +27,10 @@ footer.footer-distributed
           |         MPAV is an interactive platform for pan-genome exploration. It provides multiple different views on dozens of annotated genomes and allows rapid search by name, diversity, duplications, etc. Strain-specific meta data is integrated into the phylogenetic tree viewer such that associations of between gene presence and phenotypes can be spotted.
           |         Comments, suggestions for improvements, bug reports etc are welcome.
         .footer-icons
-          a(href='#')
-            i.fa.fa-github
+          div
+            i.fa.fa-github 
+            p 
+              span  
+                a(href='http://github.com/neherlab/pan-genome-visualization') pan-genome-visualization
+              span 
+                a(href='http://github.com/neherlab/pan-genome-analysis') pan-genome-analysis
