updated links to scripts

--- a/views/pipeline.jade
+++ b/views/pipeline.jade
@@ -133,7 +133,7 @@ html
                 u Lecture notes on MCL by Kathy Macropol, Arcadia University
     include footer
 
-    script(src='javascripts/jquery.min.js')
-    script(src='javascripts/bootstrap.min.js')
-    script(src='javascripts/jquery.bootstrap-autohidingnavbar.min.js')
-    script(src='javascripts/call-autohidingnavbar.js')
+    script(src='javascripts/third_party/jquery.min.js')
+    script(src='javascripts/third_party/bootstrap.min.js')
+    script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
+    script(src='javascripts/third_party/call-autohidingnavbar.js')
