--- a/views/tutorial.jade
+++ b/views/tutorial.jade
@@ -105,13 +105,13 @@ html
     
     include footer
 
-    script(src='javascripts/gifffer.min.js') 
+    script(src='javascripts/third_party/gifffer.min.js') 
     script.
       window.onload = function() {
       Gifffer();
       }
 
-    script(src='javascripts/jquery.min.js')
-    script(src='javascripts/bootstrap.min.js')
-    script(src='javascripts/jquery.bootstrap-autohidingnavbar.min.js')
-    script(src='javascripts/call-autohidingnavbar.js')
+    script(src='javascripts/third_party/jquery.min.js')
+    script(src='javascripts/third_party/bootstrap.min.js')
+    script(src='javascripts/third_party/jquery.bootstrap-autohidingnavbar.min.js')
+    script(src='javascripts/third_party/call-autohidingnavbar.js')
