--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -6,7 +6,7 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='./home')  Micro Pan-genome Analysis & Visualization  
+      a.navbar-brand(href='./home')  Microbial Pan-genome Analysis & Visualization  
     .navbar-collapse.collapse
       ul.nav.navbar-nav
         li.active
