added gzip compression, fixed omission of css build, added pace.js

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@ html
   head
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    script(src='javascripts/pace.min.js')
+    script(src='javascripts/third_party/pace.min.js')
     link(rel="stylesheet", type="text/css", href="dist/all.css")
     // footer icon and font
     link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
