--- a/views/footer.jade
+++ b/views/footer.jade
@@ -21,16 +21,15 @@ footer.footer-distributed
           p
             span wei.ding at tuebingen.mpg.de
             span  richard.neher at tuebingen.mpg.de
+        #github
+          i.fa.fa-github
+          p
+            a(href='https://github.com/neherlab/pan-genome-analysis') pan-genome-analysis
+            span
+            span
+              a(href='https://github.com/neherlab/pan-genome-visualization/') pan-genome-visualization
       .footer-right
         p.footer-company-about
           span About MPAV
           |         MPAV is an interactive platform for pan-genome exploration. It provides multiple different views on dozens of annotated genomes and allows rapid search by name, diversity, duplications, etc. Strain-specific meta data is integrated into the phylogenetic tree viewer such that associations of between gene presence and phenotypes can be spotted.
           |         Comments, suggestions for improvements, bug reports etc are welcome.
-        .footer-icons
-          div
-            i.fa.fa-github 
-            p 
-              span  
-                a(href='http://github.com/neherlab/pan-genome-visualization') pan-genome-visualization
-              span 
-                a(href='http://github.com/neherlab/pan-genome-analysis') pan-genome-analysis
