add files corresponding to new dataset folder structure

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     script.
-      var speciesAbbr='Papn'
-    script(src='javascripts/meta-dict-Papn.js')
+      var speciesAbbr='Pa'
+    script(src='javascripts/meta-dict-Pa.js')
