Sa as index page;clean routes

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,5 +2,5 @@ extends layout
 
 block content
     script.
-      var speciesAbbr='Pa'
-    script(src='javascripts/meta-dict-Pa.js')
+      var speciesAbbr='Sa'
+    script(src='javascripts/meta-dict-Sa.js')
