highlight row-clicking (with css:color and thead font-size); disable tableTools

--- a/public/stylesheets/dataTables-customized.css
+++ b/public/stylesheets/dataTables-customized.css
@@ -22,3 +22,14 @@ vertical-align: middle;
 th.dup-details-control.sorting_disabled, ann-details-control {
 	width: 1px;
 }
+
+/* highlight row_selected*/
+tr.row_selected td{
+	background-color:#008ACF !important;
+  	color: white;
+}
+/* thead font-size */
+th { 
+	font-size: 14px;
+	font-weight: normal; 
+}
