--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -151,6 +151,7 @@ html
     script(src='javascripts/third_party/jquery.panzoom.min.js')
     script(src='javascripts/reload.test2-reorg.min.js')
     script(src='javascripts/datatable-gc.js')
+    script(src='javascripts/tree-init.js')
     script(src='javascripts/interact.js')
     script(src='javascripts/datatable-meta.js')
     script(src='javascripts/tree-view.js')
