--- a/public/stylesheets/fontawesome-customized.css
+++ b/public/stylesheets/fontawesome-customized.css
@@ -1,8 +1,5 @@
-*.fa-arrow-circle-o-down {
+*.fa-arrow-circle-down {
 font-size:25px;
 color: steelblue;
 /* text-shadow:2px 2px 4px #000000; */
 }
-
-
-
