--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -73,21 +73,21 @@ html
             | Strain tree (SNPs in all core genes)
           .row
             #LeftTreeButtons.col-md-5(style='vertical-align: top') 
-              input#TreeViewSelect(type='checkbox', data-toggle='toggle', data-style='ios', data-on='Circular', data-off='Vertical', data-size='mini', data-onstyle='primary', data-offstyle='info')
-              input#LabelsToggle(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Label', data-off='Label', data-size='mini')
-              input#InnerNodeToggle(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Node', data-off='Node', data-size='mini')
-              input#ScalesToggle(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Scale', data-off='Scale', data-size='mini')
+              input#TreeViewSelect.btn_tooltip(type='checkbox', data-toggle='toggle', data-style='ios', data-on='Circular', data-off='Vertical', data-size='mini', data-onstyle='primary', data-offstyle='info', text='layout')
+              input#LabelsToggle.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Label', data-off='Label', data-size='mini')
+              input#InnerNodeToggle.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Node', data-off='Node', data-size='mini')
+              input#ScalesToggle.btn_tooltip(type='checkbox', checked='', data-toggle='toggle', data-style='ios', data-on='Scale', data-off='Scale', data-size='mini')
               //- input#HeightToggle(type='checkbox', checked='true', data-toggle='toggle', data-style='ios', data-on='H', data-off='H', data-size='mini')
-              button#Height_plus_Toggle.btn.btn-xs.btn-link
-                span.glyphicon.glyphicon-plus-sign
-              //- i#Height_plus_Toggle.glyphicon.glyphicon-plus-sign
-              button#Height_minus_Toggle.btn.btn-xs.btn-link(type='button')
-                span.glyphicon.glyphicon-minus-sign
+              button#Height_plus_Toggle.btn.btn-xs.btn-primary.btn_tooltip(text='111')
+                span.glyphicon.glyphicon-resize-full
+              //- i#Height_plus_Toggle.glyphicon.glyphicon-plus-sign/minus-sign
+              button#Height_minus_Toggle.btn.btn-xs.btn-primary.btn_tooltip
+                span.glyphicon.glyphicon-resize-small
               span#treeLoader
-            #tree_zoom_range.col-md-3
+            #tree_zoom_range.col-md-3.btn_tooltip
               input.zoom-range(type='range', min='0.4', max='1', step='0.05')
-            #dropdown_list.col-md-3
-            #download-coreTree.col-md-1(data-toggle='tooltip', data-placement='bottom', title='download tree')
+            #dropdown_list.col-md-3.btn_tooltip
+            #download-coreTree.col-md-1.btn_tooltip(data-toggle='tooltip', data-placement='bottom', title='download tree')
           .row
             .col-md-2
               br
@@ -156,13 +156,12 @@ html
     script(src='javascripts/third_party/msa-new.js')
     script(src='javascripts/third_party/tnt.tree.min.js')
     script(src='javascripts/third_party/jquery.panzoom.min.js')
-    script(src='javascripts/reload.test2-reorg.min.js')
+    script(src='javascripts/data_path.js')
+    script(src='javascripts/tooltips.js')
     script(src='javascripts/datatable-gc.js')
     script(src='javascripts/tree-init.js')
-    script(src='javascripts/tooltips.js')
     script(src='javascripts/tree-view.js')
     script(src='javascripts/interact.js')
     script(src='javascripts/datatable-meta.js')
     script(src='javascripts/meta-color-legend.js')
-
 
