add fonts; css orders

--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -4,28 +4,23 @@ html
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     script(src='javascripts/third_party/pace.min.js')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
     //link(rel="stylesheet", type="text/css", href="dist/all-edge.css")
-    
+
     link(rel="stylesheet", type="text/css", href='stylesheets/pace-theme-center-atom.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/nouislider.min.css')
-    //link(rel="stylesheet", type="text/css", href='javascripts/third_party/test/assets/bootstrap.min.css')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-multiselect.css')
+    link(rel='stylesheet', href='stylesheets/bootstrap.min.css')
+    //link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', type="text/css", href='stylesheets/bootstrap_customized.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-toggle.min.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/page-appearance.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
-    link(rel='stylesheet', type="text/css", href='stylesheets/bootstrap_customized.css')
-
-    link(rel="stylesheet", type="text/css", href='stylesheets/autohiding-navbar2.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/bootstrap-multiselect.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/nouislider.min.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/dc.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/dataTables.bootstrap.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/dataTables-customized.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/autohiding-navbar2.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/footer-distributed-with-address-and-phones.css')
-    
-    //- link(rel="stylesheet", type="text/css", href='https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css')
-    //- link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
 
     // footer icon and font
     link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
@@ -124,7 +119,6 @@ html
     include footer
     block content
     //- script(src='dist/all-edge.js')
-
     script(src='javascripts/colors.js')
     script(src='javascripts/species-list-info.js')
     script(src='javascripts/third_party/d3.min.js')
