--- a/views/footer.jade
+++ b/views/footer.jade
@@ -7,9 +7,9 @@ footer.footer-distributed
           a(href='#') Pipeline
           |         ·
           a(href='#') Tutorials
-        p.footer-company-name  Web application: design by Wei Ding and Richard Neher
-        p.footer-company-name  Web application: implementation by Wei Ding
-        p.footer-company-name  Logo: design by Wei Ding and Meng Chen
+        p.footer-company-name Software project and web application: design by Wei Ding and Richard Neher
+        p.footer-company-name Software project and web application: implementation by Wei Ding
+        p.footer-company-name Logo: design by Wei Ding and Meng Chen
       .footer-center
         div
           i.fa.fa-map-marker
@@ -20,7 +20,7 @@ footer.footer-distributed
           i.fa.fa-envelope
           p
             span wei.ding at tuebingen.mpg.de
-            span  richard.neher at tuebingen.mpg.de
+            span richard.neher at tuebingen.mpg.de
         #github
           i.fa.fa-github
           p
@@ -30,6 +30,6 @@ footer.footer-distributed
               a(href='https://github.com/neherlab/pan-genome-visualization/') pan-genome-visualization
       .footer-right
         p.footer-company-about
-          span About MPAV
-          |         MPAV is an interactive platform for pan-genome exploration. It provides multiple different views on dozens of annotated genomes and allows rapid search by name, diversity, duplications, etc. Strain-specific meta data is integrated into the phylogenetic tree viewer such that associations of between gene presence and phenotypes can be spotted.
+          span About panX
+          |         panX is an interactive platform for pan-genome exploration. It provides multiple different views on dozens of annotated genomes and allows rapid search by name, diversity, duplications, etc. Strain-specific meta data is integrated into the phylogenetic tree viewer such that associations of between gene presence and phenotypes can be spotted.
           |         Comments, suggestions for improvements, bug reports etc are welcome.
