--- a/views/footer.jade
+++ b/views/footer.jade
@@ -3,13 +3,13 @@ footer.footer-distributed
         img(src='images/pan-white-out.svg', style='width:233;height:209px')
         p.footer-links
           a(href='#') Applications
-          |         ·
+          |         | 
           a(href='#') Pipeline
-          |         ·
+          |         | 
           a(href='#') Tutorials
-        p.footer-company-name Software project and web application: design by Wei Ding and Richard Neher
-        p.footer-company-name Software project and web application: implementation by Wei Ding
-        p.footer-company-name Logo: design by Wei Ding and Meng Chen
+        p.footer-company-name Software and website: design by Wei Ding and Richard Neher
+        p.footer-company-name Software and website: implementation by Wei Ding
+        p.footer-company-name Logo and website &copy; 2016 Wei Ding
       .footer-center
         div
           i.fa.fa-map-marker
@@ -31,5 +31,5 @@ footer.footer-distributed
       .footer-right
         p.footer-company-about
           span About panX
-          |         panX is an interactive platform for pan-genome exploration. It provides multiple different views on dozens of annotated genomes and allows rapid search by name, diversity, duplications, etc. Strain-specific meta data is integrated into the phylogenetic tree viewer such that associations of between gene presence and phenotypes can be spotted.
+          |         panX is a powerful interactive platform for pan-genome exploration. It provides multiple different views on annotated genomes and allows rapid search by gene name, diversity, duplications, etc. Strain-specific meta-data is integrated into the phylogenetic tree viewer such that associations between gene presence and phenotypes can be spotted.
           |         Comments, suggestions for improvements, bug reports etc are welcome.
