--- a/views/layout-m_test.jade
+++ b/views/layout-m_test.jade
@@ -20,7 +20,7 @@ html
     link(rel="stylesheet", type="text/css", href='stylesheets/msa-new.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/d3-tip.css')
     link(rel="stylesheet", type="text/css", href='stylesheets/autohiding-navbar2.css')
-    link(rel="stylesheet", type="text/css", href='stylesheets/footer-distributed-with-address-and-phones.css')
+    link(rel="stylesheet", type="text/css", href='stylesheets/footer.css')
 
     // footer icon and font
     link(rel='stylesheet', type='text/css', href='http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css')
